# api/api.yaml
@@ -168,6 +168,8 @@ paths:
           description: 실패
   /api/postings/{postingId}/like:
     post:
+      security:
+        - bearerAuth: []
       summary: 좋아요
       parameters:
         - in: path
@@ -208,7 +210,7 @@ paths:
     get:
       security:
         - bearerAuth: []
-      summary: 댓글 전체 조회
+      summary: 특정 게시물 댓글 조회
       parameters:
         - in: path
           name: postingId
